# prompt-compressor

./: README.md  main.py  pyproject.toml  rules.yaml  test_compression.py
prompt_compressor/: __init__.py  cli.py
prompt_compressor/core/: analyzer.py  compressor.py  types.py
prompt_compressor/tests/: conftest.py  test_cli.py  test_compression_in_datasets.py  test_compressor.py
