[project]
name = "prompt-compressor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.13",
    "langchain-core>=1.4.9",
    "langgraph>=1.2.9",
    "pytest>=9.1.1",
    "spacy>=3.8.14",
    "tiktoken>=0.13.0",
]
